# git-version-stamp

./: README.md  git_version_stamp.py  mise.toml  pyproject.toml
git_version_stamp/: __init__.py
